Fixed some typos in user controller and profile page

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -63,7 +63,7 @@
     "sign_out": "Sign Out",
     "dashboard": "Dashboard",
     "guest_dashboard": "My Photos",
-    "invalid_credentials": "Invalide Credentials",
+    "invalid_credentials": "Invalid Credentials",
     "profile": "Profile",
     "go_home": "Go to Home",
     "help": "Help",
@@ -74,7 +74,7 @@
     "password": "Password",
     "hide": "hide",
     "show": "show",
-    "confirm_password": "Confirm Password",
+    "confirm_password": "Confirm new password",
     "email": "Email",
     "google": "Continue with Google",
     "forgot_password": "Forgot your Password?",
@@ -123,7 +123,7 @@
     "update_password": "Update password",
     "create_password_btn": "Create password",
     "uploading": "Uploading...",
-    "image_hint": "Up to 3MB, square preferred ",
+    "image_hint": "Up to 3MB, square preferred",
     "image_uploaded": "Image uploaded",
     "image_upload_failed": "Failed to upload image",
     "password_updated": "Password Updated",
