--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -339,6 +339,19 @@
     "signInToComment": "برای نظر دادن باید وارد شوید.",
     "success": "نظر با موفقیت ارسال شد!"
   },
+  "user": {
+    "not_found": "کاربر یافت نشد",
+    "failed_list": "دریافت لیست کاربران با خطا مواجه شد",
+    "failed_get": "دریافت اطلاعات کاربر با خطا مواجه شد",
+    "no_changes": "هیچ تغییری انجام نشد",
+    "invalid_role": "نقش کاربری نامعتبر است",
+    "email_in_use": "ایمیل قبلاً استفاده شده است",
+    "last_admin": "این آخرین کاربر مدیر است",
+    "failed_update": "بروزرسانی کاربر انجام نشد",
+    "cannot_delete_self_admin": "مدیر نمی‌تواند حساب خود را حذف کند",
+    "last_admin_delete": "حذف آخرین مدیر امکان‌پذیر نیست",
+    "failed_delete": "حذف کاربر انجام نشد"
+  },
   "privacy": {
     "effectiveDate": "تاریخ اجرا",
     "needHelp": "کمک می‌خواهید؟ سری بزنید به"
