--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -85,6 +85,19 @@
     "invalid_credentials": "د ننوتلو معلومات ناسم دي",
     "signed_in": "په بریالیتوب سره ننوتل وشول"
   },
+  "user": {
+    "not_found": "کاروونکی ونه موندل شو",
+    "failed_list": "د کاروونکو لست ترلاسه کول ناکام شول",
+    "failed_get": "د کاروونکي معلومات ترلاسه کول ناکام شول",
+    "no_changes": "هیڅ بدلون نه دی شوی",
+    "invalid_role": "د کاروونکي رول ناسم دی",
+    "email_in_use": "دا ایمیل مخکې کارول شوی دی",
+    "last_admin": "دا وروستی مدیر کاروونکی دی",
+    "failed_update": "د کاروونکي تازه کول ناکام شول",
+    "cannot_delete_self_admin": "مدیر نشي کولی خپل حساب حذف کړي",
+    "last_admin_delete": "د وروستي مدیر حذف کول امکان نلري",
+    "failed_delete": "د کاروونکي حذف کول ناکام شول"
+  },
   "profile": {
     "title": "ستاسو پروفایل",
     "subtitle": "خپل معلومات او امنیت مدیریت کړئ.",
