--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -118,33 +118,33 @@
       "products": "محصولات",
       "media": "رسنۍ"
     },
-    "password": "پاسورډ بدلول",
-    "create_password": "پاسورډ جوړول",
-    "current_password": "اوسنی پاسورډ",
-    "new_password": "نوی پاسورډ",
-    "set_password": "پاسورډ تنظیمول",
-    "confirm_password": "د نوي پاسورډ تایید",
-    "confirm_set_password": "پاسورډ تایید کړئ",
+    "password": "پټنوم بدلول",
+    "create_password": "پټنوم جوړول",
+    "current_password": "اوسنی پټنوم",
+    "new_password": "نوی پټنوم",
+    "set_password": "پټنوم تنظیمول",
+    "confirm_password": "د نوي پټنوم تایید",
+    "confirm_set_password": "پټنوم تایید کړئ",
     "updating": "په تازه کولو کې...",
-    "update_password": "پاسورډ تازه کړئ",
-    "create_password_btn": "پاسورډ جوړ کړئ",
+    "update_password": "پټنوم تازه کړئ",
+    "create_password_btn": "پټنوم جوړ کړئ",
     "uploading": "د پورته کولو په حال کې...",
     "image_hint": "تر ۳ مېګابایټه پورې، مربعي انځور غوره دی",
     "image_uploaded": "انځور په بریالیتوب سره پورته شو",
     "image_upload_failed": "د انځور پورته کول ناکام شول",
     "upload_image": "انځور پورته کړئ",
-    "password_mismatch": "پاسورډونه سره برابر نه دي",
-    "password_updated": "پاسورډ تازه شو",
-    "password_created": "پاسورډ جوړ شو",
+    "password_mismatch": "پټنومونه سره برابر نه دي",
+    "password_updated": "پټنوم تازه شو",
+    "password_created": "پټنوم جوړ شو",
     "guests_only": "دا برخه یوازې د مېلمنو کاروونکو لپاره ده",
     "failed_load": "د معلوماتو پورته کول ناکام شول",
     "no_changes": "هیڅ بدلون نه دی شوی",
     "email_in_use": "دا ایمیل مخکې کارول شوی دی",
     "failed_update": "تازه کول ناکام شول",
-    "new_password_required": "د نوي پاسورډ داخلول اړین دي",
-    "current_password_required": "د اوسني پاسورډ داخلول اړین دي",
-    "current_password_incorrect": "اوسنی پاسورډ ناسم دی",
-    "failed_change_password": "د پاسورډ بدلول ناکام شول",
+    "new_password_required": "د نوي پټنوم داخلول اړین دي",
+    "current_password_required": "د اوسني پټنوم داخلول اړین دي",
+    "current_password_incorrect": "اوسنی پټنوم ناسم دی",
+    "failed_change_password": "د پټنوم بدلول ناکام شول",
     "sync_missing_fields": "د همغږۍ لپاره ځینې اړین برخې نشته",
     "sync_failed": "همغږي ناکامه شوه",
     "update_failed": "تازه کول ناکام شول",
@@ -153,8 +153,8 @@
     "dim_failed": "د انځور د ابعادو ارزونه ناکامه شوه",
     "dim_too_small": "د انځور ابعاد ډېر کوچني دي",
     "dim_too_large": "د انځور ابعاد ډېر لوی دي",
-    "password_changed": "پاسورډ په بریالیتوب سره بدل شو",
-    "password_failed": "د پاسورډ بدلول ناکام شول"
+    "password_changed": "پټنوم په بریالیتوب سره بدل شو",
+    "password_failed": "د پټنوم بدلول ناکام شول"
   },
   "my_submissions": {
     "title": "زما ارسالي انځورونه",
