--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -309,8 +309,14 @@
     "title": "مجله آشپزی ریحانه",
     "subtitle": "کاوش در میراث غنی آشپزی جاده ابریشم، هر بار با روایتی جداگانه",
     "next": "بعدی",
+    "back": "لیست مقالات",
     "prev": "قبلی",
-    "loading": "بارگذاری پست..."
+    "loading": "بارگذاری پست...",
+    "no_stories": "هنوز مطلبی منتشر نشده است. لطفاً به‌زودی دوباره سر بزنید.",
+    "post": {
+      "not_found": "مقاله یافت نشد",
+      "back_to_blog": "بازگشت به وبلاگ"
+    }
   },
   "help": {
     "notFound": "مطلب راهنما پیدا نشد",
@@ -337,7 +343,9 @@
     "title": "نظرات",
     "submit": "ارسال نظر",
     "signInToComment": "برای نظر دادن باید وارد شوید.",
-    "success": "نظر با موفقیت ارسال شد!"
+    "success": "نظر با موفقیت ارسال شد!",
+    "pending_approval": "نظر شما برای بررسی ارسال شد و پس از تأیید نمایش داده خواهد شد.",
+    "comment_submit_failed": "ارسال نظر انجام نشد. لطفاً دوباره تلاش کنید."
   },
   "user": {
     "not_found": "کاربر یافت نشد",
