--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -323,7 +323,13 @@
     "subtitle": "د ورېښمو لارې د خوړو د بډایه میراث سپړنه، په یو وخت کې یوه کیسه",
     "next": "راتلونکی",
     "prev": "مخکینی",
-    "loading": "کیسې بارېږي..."
+    "loading": "کیسې بارېږي...",
+    "back": "د مقالو لست",
+    "no_stories": "تر اوسه کومه کیسه نشته. مهرباني وکړئ ژر بیا مراجعه وکړئ.",
+    "post": {
+      "not_found": "مقاله ونه موندل شوه",
+      "back_to_blog": "بلاګ ته بېرته لاړ شئ"
+    }
   },
   "help": {
     "notFound": "د مرستې مقاله ونه موندل شوه",
@@ -350,7 +356,9 @@
     "title": "تبصرې",
     "submit": "لاسلیک شوی",
     "signInToComment": "د تبصرې کولو لپاره باید ننوتل شوی یاست.",
-    "success": "تبصره په بریالیتوب سره واستول شوه!"
+    "success": "تبصره په بریالیتوب سره واستول شوه!",
+    "pending_approval": "ستاسو نظر د ارزونې لپاره واستول شو او له تایید وروسته به ښکاره شي.",
+    "comment_submit_failed": "د نظر استول ناکام شول. مهرباني وکړئ بیا هڅه وکړئ."
   },
   "privacy": {
     "effectiveDate": "د پلي کېدو نېټه",
