fixed some minor issues according to the security and best practices

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -259,13 +259,13 @@
     "empty": "No photos found.",
     "unlike": "Unlike",
     "like": "Like",
-    "disnName": "Dish Name",
-    "disnPlaceholder": "e.g. Qabili Palau",
+    "dishName": "Dish Name",
+    "dishPlaceholder": "e.g. Qabili Palau",
     "dishDescription": "Description (Optional)",
     "uploadSize": "JPG, PNG (MAX. 5MB)",
     "toast": {
       "under5mb": "Please choose an image under 5MB",
-      "no_image": "Please chose an image.",
+      "no_image": "Please choose an image.",
       "no_name": "Dish name is required",
       "submitted": "Photo submitted. It will appear after approval.",
       "guests_only": "This section is available to guest users only",
