--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -419,6 +419,13 @@
     "approve": "تایید"
   }
 },
+"not_found": {
+  "meta_title": "۴۰۴ | صفحه پیدا نشد",
+  "meta_desc": "این صفحه پیدا نشد.",
+  "title": "صفحه پیدا نشد",
+  "body": "متأسفیم، صفحه‌ای که به دنبال آن هستید وجود ندارد. ممکن است جابجا یا حذف شده باشد.",
+  "go_home": "بازگشت به خانه"
+},
 "footer": {
   "rights": "© ۲۰۲۶ لوازم آشپزخانه ریحانه. تمامی حقوق محفوظ است."
 }
