--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -419,6 +419,13 @@
       "approve": "تایید"
     }
   },
+  "not_found": {
+    "meta_title": "۴۰۴ | پاڼه ونه موندل شوه",
+    "meta_desc": "دا پاڼه ونه موندل شوه.",
+    "title": "پاڼه ونه موندل شوه",
+    "body": "بښنه غواړو، هغه پاڼه چې تاسو یې لټوئ شتون نه لري. کېدای شي لیرې یا انتقال شوې وي.",
+    "go_home": "کور ته ستنېدل"
+  },
   "footer": {
     "rights": "© 2026 د ریحانه پخلنځي وسایل. ټول حقونه خوندي دي."
   }
