Reply feature enabled on comments at the blog posts

--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -352,6 +352,7 @@
     "effectiveDate": "تاریخ اجرا"
   },
   "comments": {
+    "reply": "پاسخ",
     "message": "نظر",
     "signedIn": "وارد سیستم شده‌اید",
     "title": "نظرات",
@@ -397,36 +398,36 @@
     "form_message": "پیام",
     "form_submit": "ارسال پیام",
     "whatsapp": "واتس‌اپ",
-  "working_hours": "ساعات کاری",
-  "working_hours_value": "شنبه تا جمعه، ۹ صبح تا ۶ عصر (وقت چین)"
-},
-"dashboard": {
-  "comments": {
-    "title": "مدیریت دیدگاه‌ها",
-    "subtitle": "بررسی و مدیریت دیدگاه‌های وبلاگ",
-    "count": "{{count}} دیدگاه",
-    "updated": "دیدگاه به‌روزرسانی شد.",
-    "update_failed": "به‌روزرسانی دیدگاه انجام نشد.",
-    "deleted": "دیدگاه حذف شد.",
-    "delete_failed": "حذف دیدگاه انجام نشد.",
-    "approve_failed": "تایید دیدگاه انجام نشد.",
-    "approved": "دیدگاه تایید شد.",
-    "delete_title": "این دیدگاه حذف شود؟",
-    "delete_body": "این کار دیدگاه را به طور دائمی از وبلاگ حذف می‌کند.",
-    "empty": "هنوز دیدگاهی وجود ندارد.",
-    "pending": "در انتظار",
-    "blog": "وبلاگ",
-    "approve": "تایید"
+    "working_hours": "ساعات کاری",
+    "working_hours_value": "شنبه تا جمعه، ۹ صبح تا ۶ عصر (وقت چین)"
+  },
+  "dashboard": {
+    "comments": {
+      "title": "مدیریت دیدگاه‌ها",
+      "subtitle": "بررسی و مدیریت دیدگاه‌های وبلاگ",
+      "count": "{{count}} دیدگاه",
+      "updated": "دیدگاه به‌روزرسانی شد.",
+      "update_failed": "به‌روزرسانی دیدگاه انجام نشد.",
+      "deleted": "دیدگاه حذف شد.",
+      "delete_failed": "حذف دیدگاه انجام نشد.",
+      "approve_failed": "تایید دیدگاه انجام نشد.",
+      "approved": "دیدگاه تایید شد.",
+      "delete_title": "این دیدگاه حذف شود؟",
+      "delete_body": "این کار دیدگاه را به طور دائمی از وبلاگ حذف می‌کند.",
+      "empty": "هنوز دیدگاهی وجود ندارد.",
+      "pending": "در انتظار",
+      "blog": "وبلاگ",
+      "approve": "تایید"
+    }
+  },
+  "not_found": {
+    "meta_title": "۴۰۴ | صفحه پیدا نشد",
+    "meta_desc": "این صفحه پیدا نشد.",
+    "title": "صفحه پیدا نشد",
+    "body": "متأسفیم، صفحه‌ای که به دنبال آن هستید وجود ندارد. ممکن است جابجا یا حذف شده باشد.",
+    "go_home": "بازگشت به خانه"
+  },
+  "footer": {
+    "rights": "© ۲۰۲۶ لوازم آشپزخانه ریحانه. تمامی حقوق محفوظ است."
   }
-},
-"not_found": {
-  "meta_title": "۴۰۴ | صفحه پیدا نشد",
-  "meta_desc": "این صفحه پیدا نشد.",
-  "title": "صفحه پیدا نشد",
-  "body": "متأسفیم، صفحه‌ای که به دنبال آن هستید وجود ندارد. ممکن است جابجا یا حذف شده باشد.",
-  "go_home": "بازگشت به خانه"
-},
-"footer": {
-  "rights": "© ۲۰۲۶ لوازم آشپزخانه ریحانه. تمامی حقوق محفوظ است."
-}
 }
