--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -365,6 +365,7 @@
     }
   },
   "comments": {
+    "reply": "ځواب",
     "message": "تبصره",
     "signedIn": "لاسلیک شوی",
     "title": "تبصرې",
