--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -401,7 +401,7 @@
   "dashboard": {
     "comments": {
       "title": "Comment Moderation",
-    "subtitle": "Review and manage blog comments",
+      "subtitle": "Review and manage blog comments",
       "count": "Comments: {{count}}",
       "updated": "Comment updated.",
       "update_failed": "Failed to update comment.",
@@ -418,6 +418,7 @@
     }
   },
   "comments": {
+    "reply": "Reply",
     "cancel": "Cancel",
     "save": "Save Changes",
     "message": "Comment",
