--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -332,6 +332,13 @@
       "back_to_blog": "بازگشت به وبلاگ"
     }
   },
+  "share": {
+    "copy_link": "کپی لینک",
+    "whatsapp": "اشتراک‌گذاری در واتساپ",
+    "telegram": "اشتراک‌گذاری در تلگرام",
+    "twitter": "اشتراک‌گذاری در توییتر (X)",
+    "facebook": "اشتراک‌گذاری در فیسبوک"
+  },
   "help": {
     "notFound": "مطلب راهنما پیدا نشد",
     "description": "صفحه راهنمایی که به دنبالش هستید وجود ندارد.",
