--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -345,6 +345,13 @@
       "back_to_blog": "بلاګ ته بېرته لاړ شئ"
     }
   },
+  "share": {
+    "copy_link": "لینک کاپي کړئ",
+    "whatsapp": "په واټساپ کې شریک کړئ",
+    "telegram": "په ټیلیګرام کې شریک کړئ",
+    "twitter": "په ټویټر (X) کې شریک کړئ",
+    "facebook": "په فېسبوک کې شریک کړئ"
+  },
   "help": {
     "notFound": "د مرستې مقاله ونه موندل شوه",
     "description": "هغه د مرستې پاڼه چې تاسو یې لټوئ شتون نه لري.",
