--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -4,7 +4,8 @@
     "products": "محصولات",
     "about": "درباره ما",
     "blog": "بلاگ و آموزش آشپزی",
-    "contact": "تماس با ما"
+    "contact": "تماس با ما",
+    "quickLinks": "دسترسی سریع"
   },
   "hero": {
     "title": "ریشه‌ها در زندگی مدرن",
@@ -258,7 +259,8 @@
       "guests_only": "این بخش فقط برای کاربران مهمان در دسترس است",
       "submission_deleted": "ارسال با موفقیت حذف شد.",
       "submission_delete_failed": "حذف ارسال ناموفق بود."
-    }
+    },
+    "noPhotosYet": "هنوز هیچ عکسی ارسال نشده"
   },
   "newsletter": {
     "title": "عضویت در خانواده ریحانه",
