--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -4,7 +4,8 @@
     "products": "محصولات",
     "about": "زموږ په اړه",
     "blog": "بلاګ او ترکیبونه",
-    "contact": "اړیکه"
+    "contact": "اړیکه",
+    "quickLinks": "چټک لینکونه"
   },
   "hero": {
     "title": "په عصري ژوند کې ریښې",
@@ -271,7 +272,8 @@
       "guests_only": "دا برخه یوازې د مېلمنو کاروونکو لپاره شتون لري",
       "submission_deleted": "لېږنه په بریالیتوب سره حذف شوه.",
       "submission_delete_failed": "د لېږنې حذف ناکام شو."
-    }
+    },
+    "noPhotosYet": "تراوسه هېڅ عکس نشته"
   },
   "newsletter": {
     "title": "د ریحانه کورنۍ سره یوځای شئ",
