News Letter has been branded

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -378,10 +378,10 @@
       "needHelp": "Need help? Visit the",
       "helpCenter": "Help Center"
     },
-    "effectiveDate": "Effective Date"
+    "effectiveDate": "Updated at"
   },
   "privacy": {
-    "effectiveDate": "Effective Date",
+    "effectiveDate": "Updated at",
     "needHelp": "Need help? Visit the"
   },
   "contact_page": {
