Changed copywriting of the homepage and product page

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -16,7 +16,7 @@
   },
   "hero": {
     "title": "Roots in Modern Life",
-    "subtitle": "Experience the authentic taste of tradition with modern innovation.",
+    "subtitle": "A bridge between your kitchen and your homeland.",
     "cta": "Explore Products"
   },
   "products": {
@@ -206,7 +206,7 @@
   },
   "products_page": {
     "title": "Our Premium Collection",
-    "subtitle": "Discover the perfect blend of tradition and modern engineering.",
+    "subtitle": "Designed for the modern kitchen, yet rooted in homemade flavor.",
     "filter_all": "All",
     "filter_cookware": "Cookware",
     "filter_appliances": "Appliances",
