--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -9,7 +9,7 @@
   },
   "hero": {
     "title": "ریشه‌ها در زندگی مدرن",
-    "subtitle": "تجربه طعم اصیل سنت با نوآوری مدرن.",
+    "subtitle": "پلی میان آشپزخانه شما و سرزمین مادری‌.",
     "cta": "مشاهده محصولات"
   },
   "common": {
@@ -186,7 +186,7 @@
   },
   "products_page": {
     "title": "مجموعه ممتاز ما",
-    "subtitle": "ترکیبی کامل از سنت و مهندسی مدرن را کشف کنید.",
+    "subtitle": "طراحی شده برای آشپزخانه مدرن، اما ریشه در طعم خانگی دارد.",
     "filter_all": "همه",
     "filter_cookware": "ظروف پخت‌وپز",
     "filter_appliances": "لوازم برقی",
