--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -9,7 +9,7 @@
   },
   "hero": {
     "title": "په عصري ژوند کې ریښې",
-    "subtitle": "د عصري نوښت سره د دود اصلي خوند تجربه کړئ.",
+    "subtitle": "ستاسو د پخلنځي او ستاسو د مورنۍ خاورې ترمنځ یو پل.",
     "cta": "محصولات وپلټئ"
   },
   "products": {
@@ -199,7 +199,7 @@
   },
   "products_page": {
     "title": "زموږ غوره ټولګه",
-    "subtitle": "د دود او عصري انجینرۍ بشپړ ترکیب ومومئ.",
+    "subtitle": "د عصري پخلنځي لپاره ډیزاین شوی، خو د کورني خوند ریښې لري.",
     "filter_all": "ټول",
     "filter_cookware": "د پخلی لوښي",
     "filter_appliances": "د کور وسایل",
