--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -40,6 +40,33 @@
     "connection": "ارتباط",
     "simplicity": "سادگی"
   },
+  "brand_values": {
+    "kicker": "هویت برند",
+    "title": "ارزش‌های کلیدی ما",
+    "subtitle": "پنج تعهدی که در هر محصول برای آشپزخانه‌های مدرن با ریشه‌های اصیل رعایت می‌کنیم.",
+    "items": {
+      "simplicity": {
+        "title": "سادگی",
+        "subtitle": "زیبایی در سهولت استفاده و طراحی مینیمال."
+      },
+      "connection": {
+        "title": "ارتباط",
+        "subtitle": "پیوند مهاجران با طعم‌ها و خاطرات خانه."
+      },
+      "quality": {
+        "title": "کیفیت",
+        "subtitle": "ساخته شده با بهترین مواد و استانداردهای جهانی."
+      },
+      "innovation": {
+        "title": "نوآوری",
+        "subtitle": "راهکارهای هوشمند و کاربردی برای زندگی مدرن."
+      },
+      "authenticity": {
+        "title": "اصالت",
+        "subtitle": "حفظ ریشه‌های فرهنگی با افتخار در هر جزئیات."
+      }
+    }
+  },
   "confirm": {
     "title": "مطمئن هستید؟",
     "description": "این اقدام غیرقابل بازگشت است.",
