--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -26,6 +26,33 @@
     "connection": "اړیکه",
     "simplicity": "سادگي"
   },
+  "brand_values": {
+    "kicker": "د برانډ هویت",
+    "title": "زموږ اساسي ارزښتونه",
+    "subtitle": "پنځه ژمنې چې هر محصول یې د میراث څخه الهام اخیستل شوي عصري پخلنځي ته رسوو.",
+    "items": {
+      "simplicity": {
+        "title": "سادګي",
+        "subtitle": "ښکلا په اسانه کارولو او پاک ډیزاین کې."
+      },
+      "connection": {
+        "title": "اړیکه",
+        "subtitle": "مهاجرین له کورنیو خوندونو او خاطرو سره نښلول."
+      },
+      "quality": {
+        "title": "کیفیت",
+        "subtitle": "له غوره موادو او نړیوالو معیارونو سره جوړ شوی."
+      },
+      "innovation": {
+        "title": "نوښت",
+        "subtitle": "هوښیار او عملي حلونه د معاصر ژوند لپاره."
+      },
+      "authenticity": {
+        "title": "اصالت",
+        "subtitle": "په هره جزئیه کې د کلتوري ریښو درناوی او ساتنه."
+      }
+    }
+  },
   "common": {
     "sending": "لیږل",
     "loading": "بارېږي...",
