Upload file structure has been applied

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -69,6 +69,9 @@
     "of": "of",
     "success": "Success",
     "error": "Error",
+    "errorLoading": "Failed to load homepage content.",
+    "connectionLost": "Unable to connect",
+    "tryAgain": "Try again",
     "delete": "Delete",
     "cancel": "Cancel",
     "noComments": "No comments yet. Be the first to share your thoughts!",
