--- a/client/src/locales/fa.json
+++ b/client/src/locales/fa.json
@@ -21,6 +21,9 @@
     "of": "از",
     "success": "موفقیت",
     "error": "خطا",
+    "errorLoading": "بارگذاری محتوای صفحه اصلی موفق نبود",
+    "connectionLost": "قادر به اتصال نیست",
+    "tryAgain": "دوباره تلاش کنید",
     "delete": "حذف",
     "cancel": "انصراف",
     "noComments": "هنوز نظری ثبت نشده است. اولین نفری باشید که نظر خود را به اشتراک می‌گذارد!",
