--- a/client/src/locales/ps.json
+++ b/client/src/locales/ps.json
@@ -62,6 +62,9 @@
     "of": "د",
     "success": "بریا",
     "error": "تېروتنه",
+    "errorLoading": "د کور پاڼې منځپانګه نشو بارولای",
+    "connectionLost": "نشي کولی وصل شي",
+    "tryAgain": "بیا هڅه وکړئ",
     "delete": "حذف",
     "cancel": "لغوه",
     "noComments": "تر اوسه کوم نظر نشته. تاسو لومړی کس اوسئ چې خپل نظر شریکوئ!",
